--- a/2_PM/package.json
+++ b/2_PM/package.json
@@ -4,12 +4,14 @@
   "description": "## GeoExplorer",
   "main": "config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node googlr_api.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/maps": "^0.5.5"
+    "@google/maps": "^0.5.5",
+    "dotenv": "^6.2.0"
   }
 }
